--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "exercicio-modulo-22-entrega-ebac",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "dev": "parcel src/index.html src/styles/main.scss src/scripts/main.js",
-    "build": "parcel build src/index.html --no-cache --public-url ./",
+    "build": "parcel build src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
